// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`removeComments > HTML comment edge cases > preserves HTML comments inside indented code blocks 1`] = `
"Paragraph before

\`\`\`
<!-- indented code block comment -->
const x = 1;
\`\`\`

Paragraph after"
`;

exports[`removeComments > complex real-world scenarios > handles a document with comments in every type of block 1`] = `
"# Heading&#x20;

Paragraph  text.

> Quote&#x20;

* List item&#x20;

| H1 | H2 |
| :- | :- |
|  | data |

\`\`\`
<!-- preserved in code block -->
\`\`\`

\`<!-- preserved in inline code -->\`

[block:html]
{
  "html": "<!-- preserved in magic block -->"
}
[/block]

End"
`;

exports[`removeComments > complex real-world scenarios > handles a mixed mdxish document with comments throughout 1`] = `
"# Title

Some text  and  here.

\`{/* preserved in code */}\`
\`<!-- preserved in code -->\`

End"
`;

exports[`removeComments > preserves magic block indentation 1`] = `
"* foo
* foo

[block:html]
{
  "html": "<h1>Hoo ha</h1>"
}
[/block]"
`;

exports[`removeComments > preserves magic blocks inside markdown lists 1`] = `
"* Item one with a magic block:

[block:callout]
  {
    "type": "info",
    "body": "This callout is inside a list item"
  }
  [/block]

* Item two
* Item three with inline magic block
  \`__MAGIC_BLOCK_1__\`"
`;

exports[`removeComments > removes HTML comments 1`] = `
"Hello

Beep boop bop&#x20;
Bop

[block:html]
{
  "html": "<h1>Magic blocks should not have comments removed.</h1>
<!--custom html comment-->"
}
[/block]

<ResuableContent />

\`\`\`html
<div>
	Code blocks should not have comments removed.
  <!--code block comment-->
</div>
\`\`\`

[block:image]{ "images": [{ "image": ["https://owlbertsio-resized.s3.amazonaws.com/This-Is-Fine.jpg.full.png", "", "" ], "align": "center" } ]}[/block]

\`<!-- code block comment -->\`

<br />

Beep boop bop

![](https://owlbertsio-resized.s3.amazonaws.com/This-Is-Fine.jpg.full.png)

Beep boop bop

| A  | B  | C  |
| :- | :- | :- |
| 1  |    | 3  |"
`;

exports[`removeComments > removes MDX comments 1`] = `
"# Title

{foo}

Some text.

More text.

\`{/* Comment in code element should NOT be removed */}\`

Last text"
`;

exports[`removeComments > removes both HTML and JSX comments with mdxish option 1`] = `
"# Title

Some text.

More text.

\`{/* Comment in code element should NOT be removed */}\`
\`<!-- Code block HTML comment should NOT be removed -->\`

Last text"
`;

exports[`removeComments > strip comments edge cases > magic blocks in complex structures: after blockquote 1`] = `
"> Quote

[block:code]
{
  "codes": [{"code": "x = 1", "language": "py"}]
}
[/block]"
`;

exports[`removeComments > strip comments edge cases > magic blocks in complex structures: after heading 1`] = `
"# Title

[block:callout]
{
  "type": "warning",
  "body": "Caution"
}
[/block]"
`;

exports[`removeComments > strip comments edge cases > magic blocks in complex structures: consecutive 1`] = `
"[block:html]
{
  "html": "<div>A</div>"
}
[/block]

[block:html]
{
  "html": "<div>B</div>"
}
[/block]"
`;

exports[`removeComments > strip comments edge cases > magic blocks in complex structures: in a nested list 1`] = `
"* Outer
  * Inner

[block:html]
    {
      "html": "<b>deep</b>"
    }
    [/block]

* Another"
`;

exports[`removeComments > strip comments edge cases > magic blocks in complex structures: under a list item 1`] = `
"* Item

[block:callout]
  {
    "type": "info",
    "body": "nested"
  }
  [/block]

* Next"
`;

exports[`removeComments > strip comments edge cases > preserves indented code block comments 1`] = `
"Paragraph

\`\`\`
<!-- indented -->
const x = 1;
\`\`\`

After"
`;

exports[`removeComments > strip comments edge cases > preserves magic blocks in complex structures: consecutive magic blocks 1`] = `
"[block:html]
{
  "html": "<div>A</div>"
}
[/block]

[block:html]
{
  "html": "<div>B</div>"
}
[/block]"
`;

exports[`removeComments > strip comments edge cases > preserves magic blocks in complex structures: magic block after blockquote 1`] = `
"> Quote

[block:code]
{
  "codes": [{"code": "x = 1", "language": "py"}]
}
[/block]"
`;

exports[`removeComments > strip comments edge cases > preserves magic blocks in complex structures: magic block after heading 1`] = `
"# Title

[block:callout]
{
  "type": "warning",
  "body": "Caution"
}
[/block]"
`;

exports[`removeComments > strip comments edge cases > preserves magic blocks in complex structures: magic block directly under a list item 1`] = `
"* Item

[block:callout]
  {
    "type": "info",
    "body": "nested"
  }
  [/block]

* Next"
`;

exports[`removeComments > strip comments edge cases > preserves magic blocks in complex structures: magic block in nested list 1`] = `
"* Outer
  * Inner

[block:html]
    {
      "html": "<b>deep</b>"
    }
    [/block]

* Another"
`;

exports[`removeComments > strip comments edge cases > preserves raw HTML elements: br tag 1`] = `"<br />"`;

exports[`removeComments > strip comments edge cases > preserves raw HTML elements: div with content 1`] = `
"<div>
  <p>Hello</p>
</div>"
`;

exports[`removeComments > strip comments edge cases > preserves raw HTML elements: style attribute 1`] = `"<p style="background-color: salmon">fish content</p>"`;

exports[`removeComments > strip comments edge cases > preserves raw HTML elements: style tag 1`] = `
"<style>
  * { background: olive; }
</style>"
`;

exports[`removeComments > supports a magic block as the first line of the document 1`] = `
"[block:html]
{
  "html": "<div>
Hello
</div>"
}
[/block]

How are you?"
`;
